# CodeCave

./: .gitignore  Hello  Hello.c  ILOVECHARS.c  Program.c  README.md  Sorting.c  SortingCopy  SortingCopy.c
08-10-2024/: AnotherDataFlow.py  Ant.py  Armstrong.py  ArtyomAndEvilSix.py  Automorph.py  Blue.py  Cake.py  ChessPlayers.py  DataFlow.py  DataFlow2.py  DataFlow3.py  DedMoroz.py  Earth.py  Equation.py  Factorial.py  FloorsAndEntrances.py  GC-Structure.py  Ipolit.py  MRR.py  Marathon.py  PaintingRoom.py  ProblemOfBrakingPathOfCar.py  Replacing.py  SaturdaySunday.py  Schitalka.py  SymmetricalPoint.py  ThatOneDataFlow.py
C#/FirstProject/: FirstProject.sln
C++/HW-01-02/: Task1.cpp  Task2.cpp
C++/HelloWorld/: helloWorld.cpp  helloWorld.ilk
C++/MnToPM/Homework/HW-6/: CMakeLists.txt  main.cpp
C++/MnToPM/Homework/HW-6/modules/: CMakeLists.txt  lib.cpp  lib.h
C++/MnToPM/Homework/HW-6/tests/: CMakeLists.txt  gtest.cpp
DB/: .project  HomeWork01.md  HomeWprk03.md
DoSM/: Classes.py  Hangman.py
JS/: Hello.js  bins.js  checkSpam.js  functions.js  max_arr.js  min-max_arr.js  objects.js  regexp.js  script.js  scripts.js  server.js  set.js  strings.js  sum.js  ucFirst.js
Miheev George/: cents.py  hello.c  task.py  time_2.py
My-files/: work-with-table.md
Phyton/: apples.py  apples2.py  candy.py  flatPosition.py  months.py  name.py  schoolLessons.py  time_1.py
Python/: GuessNumberGame.py  Hello.py  days.py
SQLite/: people.db  test.db  test.py
Test/: NewBranch.txt  testing.txt
Web/: HelloWorld.html  NewPage.html  Strings.html  Web.rar  test.html
(+1146 files in other folders)
